--- a/TID/DM.tex
+++ b/TID/DM.tex
@@ -53,10 +53,8 @@
 \newpage
 \section{Préambule}
 Pour les calculs, nous avons choisit de faire l'exercice 1 (\ref{Exercice1}) en utilisant le logarithme en base 2, et les exercices 2 et 3 (\ref{exercice2} et \ref{exercice3}) en logarithme népérien.\\
-Cependant, calculer avec le logarithme népérien ou avec le logarithme en base 2 revient au même. En effet, les deux logarithmes peuvent être reliés par une relation.
- Cela signifie que toute expression impliquant \( \log_2 \) peut être transformée en \( \ln \), et cela ne change pas l'interprétation des résulats. Ils ont seulement un facteur multiplicatif constant les différenciant.
+En effet, calculer avec le logarithme népérien ou avec le logarithme en base 2 revient au même. Les deux logarithmes sont les mêmes à un facteur près.
 
-Ces deux logarithmes sont reliés par la formule suivante :
 
 \[
 \log_2(x) = \frac{\ln(x)}{\ln(2)}
@@ -261,7 +259,7 @@ $Z1 =\{ \{0 \% \} , \{0 - 0.5 \% ,0.5-1 \% ,1-3 \% ,>3 \% \} \}$
 
 \subsubsection{Recodage en 3 variables}
 
-En procédant de la meme facon, on considère alors 6 cas :
+En procédant de la meme façon, on considère alors 6 cas :
 
 \[
 Z_1 =\{ \{0 \% \} , \{0 - 0.5 \%\} ,\{0.5-1 \% ,1-3 \% ,>3 \% \} \}  
@@ -286,7 +284,7 @@ L'entropie est calculé numériquement :
 \[
 H(Z_1) = 1.541 \hspace{0.5cm} H(Z_2) = 1.462 \hspace{0.5cm} H(Z_3) = 1.068 \hspace{0.5cm} H(Z_4) = 1.040 \hspace{0,5cm} H(Z_5) = 1.320 \hspace{0,5 cm} H(Z_6) = 0.684
 \]
-Nous remarquons que le meilleure recodage en 3 variables est $Z1$.
+Nous remarquons que le meilleure recodage en trois variables est $Z_1$.
 
 \subsection{Le meilleur recodage de X pour prédire Y }
 
@@ -453,7 +451,7 @@ De la même manière, nous pouvons calculer l'information mutuelle et nous trouv
 
 
 
-Nous pouvons conclure a cette étape que la variable qui apporte le plus d'information sur la comestibilité du champignon est la couleur du champignon. En effet, l'information mutuelle $I(X_1,X_4)$ est la plus élevé.
+Nous pouvons conclure a cette étape que la variable qui apporte le plus d'information sur la comestibilité du champignon est sa couleur. En effet, l'information mutuelle $I(X_1,X_4)$ est la plus élevé.
 \\
 De plus, on se rend compte dans le tableau \ref{tab:champignons} que les champignons brun sont commestibles alors que les rouges ne le sont pas.
 \\
@@ -489,7 +487,7 @@ Nous calculons les informations mutuelles et nous obtenons les résultats suivan
 \]
 
 On considère alors la variable $X_3$, celle qui correspond à la tige du champignon. Si le champignon est jaune et épais, alors il est commestible. Sinon il faut distinguer entre le champignon d (commestible) et les champignons g,i,j.
-
+Mais seul les champignons d et j partage la meme forme du chapeau (plat), alors que les champignons g et i sont respectivement; pointu, arrondi et tout deux non comestible.
 \newpage
 \subsection{Arbre de discrimination}
 
@@ -514,8 +512,8 @@ Avec toutes les informations mutuelles calculé, on obtient alors l'arbre suivan
     child {node {rouge}
         child {node {f,h} edge from parent node[right] {Non comestible}}
     }
-    child {node {tige}
-        child {node {Epaisse}
+    child {node {jaune}
+        child {node {Epaisse} 
             child {node {b} edge from parent node[right] {Comestible}}
         }
         child {node {fine}
@@ -544,7 +542,6 @@ Avec toutes les informations mutuelles calculé, on obtient alors l'arbre suivan
   }
 \caption{Arbre de discrimination pour la comestibilité d'un champignon}
 \end{figure}
-\end{document}
 
 
 
