--- a/TID/DM.tex
+++ b/TID/DM.tex
@@ -48,6 +48,7 @@
 
 \newpage
 
+\setcounter{section}{-1}
 \tableofcontents
 
 \newpage
@@ -81,40 +82,40 @@ Tout d'abord de manière intuitive, nous avons envie de modéliser la variable
 socioprofessionnelle avec les deux autres. Cependant, nous devons
 le montrer de manière formelle. Grâce au code fourni dans la partie \ref{sec : Annexe},
 nous calculons l'information mutuelle de chacune des variables.\\\\
-Premièrement, nous calculons l'entropie de chacune de ces variables.\\
+Premièrement, calculons l'entropie de chacune de ces variables.\\
 Pour la variable $A$, nous avons le tableau suivant (en fréquence). 
 \begin{table}[ht]
   \centering
+  \caption{Distribution par âge ($A$)}
   \begin{tabular}{|l|l|l|l|l|l|l|}
     \hline
     & 15-29 ans  & 30-39 ans  & 40-49 ans  & 50-59 ans  & 60+ ans \\ \hline
     Age & 0.1866 & 0.2419 & 0.2730 & 0.2441 & 0.0542 \\ \hline
   \end{tabular}
-  \caption{Distribution par âge ($A$)}
 \end{table}
 \\Nous pouvons calculer l'entropie de $A$.\\
 \[
-H(A) = -\sum_{n = 1}^{6}p_i\log_2(p_i)=2,1833
+H(A) = -\sum_{n = 1}^{5}p_i\log_2(p_i)=2,1833
 \]
-De même manière, nous calculons l'entropie de $C$ et $S$.\\
+De la même manière, nous calculons l'entropie de $C$ et $S$. Nous utilisons les tableaux ci dessous.\\
 \begin{table}[H]
   \centering
+  \caption{Distribution par sexe ($S$)}
   \begin{tabular}{|l|l|l|}
   \hline
              & Femme  & Homme  \\ \hline
   Proportion & 0,6589 & 0,3411 \\ \hline
   \end{tabular}
-  \caption{Distribution par sexe ($S$)}
 \end{table}
 
 \begin{table}[H]
   \centering
+  \caption{Distribution par catégorie socioprofessionnelle ($C$)}
   \begin{tabular}{|l|l|l|l|l|l|l|}
   \hline
              & Agriculteur & Artisans & Cadres & Profession In & Employes & Ouvrier \\ \hline
   Proportion & 0,0207      & 0,0740   & 0,1875 & 0,2512        & 0,2240   & 0,2423  \\ \hline
   \end{tabular}
-  \caption{Distribution par catégorie socioprofessionnelle ($C$)}
   \end{table}
 
 
@@ -122,20 +123,26 @@ Nous obtenons.
 \[
 H(S) = 0,9258  \hspace{2 cm} H(C)= 2,3266
 \]
-A présent, nous devons calculer les valeurs suivantes : $H(A,S)$, $H(A,C)$ et $H(S,C)$.\\
+A cette étape, nous pouvons interpréter les résulats. L'entropie d'une variables, mesure l'incertitude liée a celle ci. Donc la variable $C$ est la variable avec l'incertitude la plus élevée.\\
+Nous allons maintenant calculer les valeurs suivantes : $H(A,S)$, $H(A,C)$ et $H(S,C)$. Pour ce faire, nous déterminerons les tableaux joints correspondants pour chacune de ces paires de variables. Puis nous calculerons l'entropie des ces paires.
+\[
+  H(X) = - \sum_{x \in Tableau} P(x) \log_2(P(x))
+\]
+Nous trouvons.
 \begin{table}[H]
   \centering
+  \caption{Distribution jointe sexe ($S$) et âge ($A$)}
   \begin{tabular}{|l|l|l|l|l|l|}
   \hline
         & 15-29 ans & 30-39 ans & 40-49 ans & 50-59 ans & 60+    \\ \hline
   Femme & 0,1220    & 0,1584    & 0,1803    & 0,1618    & 0,0362 \\ \hline
   Homme & 0,0645    & 0,0834    & 0,0927    & 0,0823    & 0,1802 \\ \hline
   \end{tabular}
-  \caption{Distribution jointe sexe ($S$) et âge ($A$)}
-  \end{table}
+\end{table}
 
   \begin{table}[H]
     \centering
+    \caption{Distribution jointe ($C$) et âge ($A$)}
     \begin{tabular}{|l|l|l|l|l|l|}
     \hline
                    & 15-29 ans & 30-39 ans & 40-49 ans & 50-59 ans & 60+    \\ \hline
@@ -146,19 +153,17 @@ A présent, nous devons calculer les valeurs suivantes : $H(A,S)$, $H(A,C)$ et $
     Employes       & 0,0509    & 0,0511    & 0,0571    & 0,0535    & 0,0113 \\ \hline
     Ouvrier        & 0,0586    & 0,0586    & 0,0604    & 0,0569    & 0,0077 \\ \hline
     \end{tabular}
-    \caption{Distribution jointe ($C$) et âge ($A$)}
-    
   \end{table}
 
 \begin{table}[H]
   \centering
+  \caption{Distribution jointe ($C$) et ($S$)}
   \begin{tabular}{|l|l|l|l|l|l|l|}
   \hline
          & Agriculteur & Artisans & Cadres & Profession IN & Employes & Ouvrier \\ \hline
     Femmes & 0.0119      & 0.0433   & 0,1175 & 0.1705        & 0.1810   & 0.1344  \\ \hline
     Homme  & 0.0087      & 0.0307   & 0,0700 & 0.0807        & 0.0430   & 0.1079  \\ \hline
     \end{tabular}
-    \caption{Distribution jointe ($C$) et ($S$)}
 \end{table}
 Nous obtenons les valeurs suivantes.
 \[
@@ -178,7 +183,10 @@ I(A,(SC))= 0,029803
 \[
 I(S,(CA))=0,029813
 \]
-Cherchons le rapport entre l'information mutuelle et la variable conditionnée le plus élevé.
+L’information mutuelle mesure la quantité d’information partagée entre deux variables aléatoires, indiquant dans quelle mesure la connaissance de l’une des variables réduit l’incertitude concernant l’autre. 
+Avec les calculs précédants, nous observons que la connaissance de la catégorie socioprofessionel réduit le plus l'incertitude sur l'âge et le sexe.\\
+De plus, une information mutuelle proche de 0 sugère une indépendance.\\
+Calculons le rapport entre l'information mutuelle et la variable conditionnée le plus élevé.
 \[
 R_1 = \frac{I(C,(AS))}{H(A,C)}=0,0187
 \]
@@ -189,6 +197,7 @@ R_2 = \frac{I(A,(SC)))}{H(S,C)}=0,0092
 R_3 = \frac{I(S,(CA)))}{H(A,C)}=0,0066
 \]
 Le rapport $R_1$ est le plus élevé. Donc la variable $C$ modélisé par les deux autres ($A$ et $S$) nous donne le plus d'information.
+En d'autres termes, la connaissance de la catégorie socioprofesionnelle et du couple âge, sexe apporte un gain d'information sur le couple âge, catégorie socioprofesionnelle. Et ce gain est de $1,8\%$.
 \subsection{Arbre de segmentation binaire}
 Grâce à la partie \ref{1.1}, nous pouvons calculer les informations mutuelles suivantes.
 \[
@@ -200,7 +209,15 @@ I(A,C) = 0,02830
 \[
 I(S,C)= 0,02831
 \]
-Faisons, la somme de ses informations mutuelles avec chacune des deux autres.
+Les résultats ci dessus, permettent de faire les interprétations suivantes. La variable âge et sexe sont proche de l'indépendance. Donc l'une n'influe presque pas sur l'autre. Et l'information mutuelle entre $A$ et $C$ est très proche de celle entre $S$ et $C$.
+\\
+Calculons maintenant la somme des informations mutuelles de chaque variable avec les deux autres. En pratique, nous souhaitons identifier la variable qui fournit le plus d'informations sur les autres. Cela revient à calculer :
+\begin{equation}
+    \bar{I}_k = \sum_{n \neq k} I(X_n, X_k)
+    \label{eq : I bar}
+\end{equation}
+Ensuite, nous choisirons la variable pour laquelle \( \bar{I}_k \) est maximale.
+
 \[
 \bar{I_A} = I(A,S) + I(A,C) = 0,02835
 \]
@@ -210,9 +227,55 @@ Faisons, la somme de ses informations mutuelles avec chacune des deux autres.
 \[
 \bar{I_C} = 0,0566
 \]
-Nous avons donc $\bar{I_C}$ qui est le plus élevé. Ainsi, l'arbre de segmentation commencera avec la variable $C$.
-
-
+Nous avons donc $\bar{I_C}$ qui est le plus élevé. Ainsi, l'arbre de segmentation commencera avec la variable $C$, car elle fournit le plus d'information sur $A$ et $S$.
+\\
+Ce résultat était attendu, il correspond avec ce qu'on a trouvé dans la partie \ref{1.1}. Cela nous conforte dans l'idée que la variables $C$ nous apporte plus d'informations sur les deux autres.
+\\
+De plus, lors de la construction de l'abre, le choix de la deuxième variable de segmentations n'a pas d'inmportance, étant donné qu'il nous reste deux variables de segmentation. 
+\newpage
+\begin{figure}
+  \begin{center}
+    \begin{tikzpicture}[
+      grow=down,
+      sibling distance=30mm,
+      level distance=20mm, % Distance entre les niveaux
+      every node/.style={draw, rounded corners, align=center, fill=white!20}
+      ]
+    \node {Catégories Socioprofessionnelles}
+      child { node {Agriculture \\ (833)} % Effectif fictif pour Agriculture
+        child { node {...} } % Points de suspension pour Agriculture
+      }
+      child { node {Artisans \\ (2974.2)} % Effectif fictif pour Artisans
+        child { node {...} } % Points de suspension pour Artisans
+      }
+      child { node {Cadres \\ (7538.3)} % Effectif fictif pour Cadres
+        child { node {Femme \\ (4725)} % Effectif fictif pour Femme
+          child { node {Âge} 
+            child { node {15 à 29 ans \\ (564.9)} } % Effectif pour Femme
+            child { node {30-39 ans \\ (1209)} }
+            child { node {40-49 ans \\ (1429.5)} }
+            child { node {50-59 ans \\ (1161.6)} }
+            child { node {60+ ans \\ (360)} }
+          }
+        } % Fin du nœud Femme
+        child { node {Homme \\ (2813.3)} % Effectif fictif pour Homme
+          child { node {...} 
+          }
+        } % Fin du nœud Homme
+      }
+      child { node {Professions Intellectuelles \\ (10096.7)} % Effectif fictif pour Professions Intellectuelles
+        child { node {...} } % Points de suspension pour Professions Intellectuelles
+      }
+      child { node {Employés \\ (9003.6)} % Effectif fictif pour Employés
+        child { node {...} } % Points de suspension pour Employés
+      }
+      child { node {Ouvriers \\ (9738.8)} % Effectif fictif pour Ouvriers
+        child { node {...} } % Points de suspension pour Ouvriers
+      };
+    \end{tikzpicture}
+    \caption{Arbre de segmentation binaire}
+    \end{center}
+  \end{figure}
 
 
 
