--- a/TID/DM.tex
+++ b/TID/DM.tex
@@ -82,8 +82,7 @@ Tout d'abord de manière intuitive, nous avons envie de modéliser la variable
 socioprofessionnelle avec les deux autres. Cependant, nous devons
 le montrer de manière formelle. Grâce au code fourni dans la partie \ref{sec : Annexe},
 nous calculons l'information mutuelle de chacune des variables.\\\\
-Premièrement, calculons l'entropie de chacune de ces variables.\\
-Pour la variable $A$, nous avons le tableau suivant (en fréquence). 
+Premièrement, calculons l'entropie de chacune de ces variables. Pour la variable $A$, nous avons le tableau suivant (en fréquence). 
 \begin{table}[ht]
   \centering
   \caption{Distribution par âge ($A$)}
@@ -288,10 +287,9 @@ De plus, lors de la construction de l'abre, le choix de la deuxième variable de
 \subsubsection{Recodage en 2 variables}
 
 En agrégeant seulement les classes contigues, nous avons 4 possibilités de regroupement binaire de 
-X.
+$X$.
 \\
- NB : Dans cette partie, nous effecturons nos calculs avec le log népérien.
-
+ 
 
 \[
 Z_1 =\{ \{0 \% \} , \{0 - 0.5 \% ,0.5-1 \% ,1-3 \% ,>3 \% \} \}  
@@ -307,8 +305,19 @@ Z_4 =\{ \{0 \% , 0 - 0.5 \% ,0.5-1 \% ,1-3 \% \} , \{>3 \% \} \}
 \]
 
 
-L'entropie de chacun de ses recodages se calcule numeriquement et donne :
-
+L'entropie de chacun de ses recodages se calcule numériquement.
+\\
+Détaillons le premier calcul. Nous cherchons le tableau associé a $Z_1$, puis nous calculons $H(Z_1)$.
+\begin{table}[H]
+  \centering
+    \caption{Tableau entre $Y$ et $Z_1$}
+    \begin{tabular}{|l|c|c|}
+    \hline
+    $Y \backslash Z_1$ & 0\% & \{0 - 0.5 \% ,0.5-1 \% ,1-3 \% ,>3 \% \} \\ \hline
+    O                    & 2  & 20  \\ \hline
+    N                    & 27  & 23  \\ \hline
+    \end{tabular}
+\end{table}
 \[
 H(Z_1) = -\left(\frac{29}{72}log_2(\frac{29}{72})+\frac{43}{72}log_2(\frac{43}{72})\right) = 0.973
 \]
@@ -317,7 +326,8 @@ De la même manière, nous trouvons.
 H(Z_2) = 0.954 \hspace{1cm} H(Z_3) = 0.617 \hspace{1cm} H(Z_4) = 0.106
 \]
 Le meilleur recodage est donc le premiers c'est à dire :
-$Z1 =\{ \{0 \% \} , \{0 - 0.5 \% ,0.5-1 \% ,1-3 \% ,>3 \% \} \}$
+$Z1 =\{ \{0 \% \} , \{0 - 0.5 \% ,0.5-1 \% ,1-3 \% ,>3 \% \} \}$.\\
+En effet $H(Z_1)$ à l'entropie la plus élevée.
 
 
 \subsubsection{Recodage en 3 variables}
@@ -356,7 +366,7 @@ Nous devons donc trouver le $Z_k$ qui maximise l'information mutuelle entre $Z_k
 \\
 C'est à dire, trouvons le recodage $Z_k$ qui maximise :
 \begin{equation}
-  I(Z_k; Y) = \sum_{z\in Z_k} \sum_{y \in Y} p(z, y) \log \left( \frac{p(z, y)}{p(z)p(y)} \right)
+  I(Z_k; Y) = \sum_{z\in Z_k} \sum_{y \in Y} p(z, y) \log_2 \left( \frac{p(z, y)}{p(z)p(y)} \right)
   \label{eq:infomutu}
 \end{equation}
 
@@ -521,7 +531,7 @@ De plus, on se rend compte dans le tableau \ref{tab:champignons} que les champig
 Traitons le cas des champignons jaune.
     
 \subsubsection{Deuxieme étape : champignons jaune}
-En considérant que les champignons jaune, on calcul les informations mutuelles suivant les autres variables ($X_2$ et $X_3$). Nous obtenons les tableaux suivant.
+En considérant seulement les champignons jaune, on calcul les informations mutuelles suivant les autres variables ($X_2$ et $X_3$). Nous obtenons les tableaux suivant.
 
 \begin{table}[H]
   \caption{Tableau de $X_1$,$X_2$ avec champignon jaune}
@@ -549,8 +559,8 @@ Nous calculons les informations mutuelles et nous obtenons les résultats suivan
   I(X_1,X_2)=0.118 \hspace{1cm} I(X_1,X_3)=0.223.
 \]
 
-On considère alors la variable $X_3$, celle qui correspond à la tige du champignon. Si le champignon est jaune et épais, alors il est commestible. Sinon il faut distinguer entre le champignon d (commestible) et les champignons g,i,j.
-Mais seul les champignons d et j partage la meme forme du chapeau (plat), alors que les champignons g et i sont respectivement; pointu, arrondi et tout deux non comestible.
+On considère alors la variable $X_3$, celle qui correspond à la tige du champignon. Si le champignon est jaune et que la tige est épaisse, alors il est commestible. Sinon il faut distinguer entre le champignon d (commestible) et les champignons g,i,j.
+Mais seul les champignons d et j partagent la même forme du chapeau (plat), alors que les champignons g et i sont respectivement; pointu, arrondi et tout deux non comestible.
 \newpage
 \subsection{Arbre de discrimination}
 
@@ -611,4 +621,14 @@ Avec toutes les informations mutuelles calculé, on obtient alors l'arbre suivan
 \newpage
 \section{ANNEXE}
 \label{sec : Annexe}
+
+\lstset{literate=%
+ {é}{{\'e}}1
+ {è}{{\`e}}1
+ {à}{{\`a}}1
+ {ù}{{\`u}}1
+}
+\lstinputlisting{./main.R}
+
+
 \end{document}
