--- a/TID/DM.tex
+++ b/TID/DM.tex
@@ -319,11 +319,11 @@ Détaillons le premier calcul. Nous cherchons le tableau associé a $Z_1$, puis 
     \end{tabular}
 \end{table}
 \[
-H(Z_1) = -\left(\frac{29}{72}log_2(\frac{29}{72})+\frac{43}{72}log_2(\frac{43}{72})\right) = 0.973
+H(Z_1) = -\left(\frac{29}{72}ln(\frac{29}{72})+\frac{43}{72}ln(\frac{43}{72})\right) = 0.674
 \]
 De la même manière, nous trouvons.
 \[
-H(Z_2) = 0.954 \hspace{1cm} H(Z_3) = 0.617 \hspace{1cm} H(Z_4) = 0.106
+H(Z_2) = 0.661 \hspace{1cm} H(Z_3) = 0.427 \hspace{1cm} H(Z_4) = 0.073
 \]
 Le meilleur recodage est donc le premiers c'est à dire :
 $Z1 =\{ \{0 \% \} , \{0 - 0.5 \% ,0.5-1 \% ,1-3 \% ,>3 \% \} \}$.\\
@@ -355,7 +355,7 @@ Z_1 =\{ \{0 \% \} , \{0 - 0.5 \%\} ,\{0.5-1 \% ,1-3 \% ,>3 \% \} \}
 \\
 L'entropie est calculé numériquement :
 \[
-H(Z_1) = 1.541 \hspace{0.5cm} H(Z_2) = 1.462 \hspace{0.5cm} H(Z_3) = 1.068 \hspace{0.5cm} H(Z_4) = 1.040 \hspace{0,5cm} H(Z_5) = 1.320 \hspace{0,5 cm} H(Z_6) = 0.684
+H(Z_1) = 1,068 \hspace{0.5cm} H(Z_2) = 1,014 \hspace{0.5cm} H(Z_3) = 0,740 \hspace{0.5cm} H(Z_4) = 0,721 \hspace{0,5cm} H(Z_5) = 0.915 \hspace{0,5 cm} H(Z_6) = 0.474
 \]
 Nous remarquons que le meilleure recodage en trois variables est $Z_1$.
 
