--- a/TID/DM.tex
+++ b/TID/DM.tex
@@ -53,7 +53,7 @@
 
 \newpage
 \section{Préambule}
-Pour les calculs, nous avons choisit de faire l'exercice 1 (\ref{Exercice1}) en utilisant le logarithme en base 2, et les exercices 2 et 3 (\ref{exercice2} et \ref{exercice3}) en logarithme népérien.\\
+Pour les calculs, nous avons choisi de faire l'exercice 1 (\ref{Exercice1}) en utilisant le logarithme en base 2, et les exercices 2 et 3 (\ref{exercice2} et \ref{exercice3}) en logarithme népérien.\\
 En effet, calculer avec le logarithme népérien ou avec le logarithme en base 2 revient au même. Les deux logarithmes sont les mêmes à un facteur près.
 
 
@@ -92,11 +92,12 @@ Premièrement, calculons l'entropie de chacune de ces variables. Pour la variabl
     Age & 0.1866 & 0.2419 & 0.2730 & 0.2441 & 0.0542 \\ \hline
   \end{tabular}
 \end{table}
-\\Nous pouvons calculer l'entropie de $A$.\\
+\\
+Nous pouvons calculer l'entropie de $A$.\\
 \[
 H(A) = -\sum_{n = 1}^{5}p_i\log_2(p_i)=2,1833
 \]
-De la même manière, nous calculons l'entropie de $C$ et $S$. Nous utilisons les tableaux ci dessous.\\
+De la même manière, nous calculons l'entropie de $C$ et $S$. Nous utilisons les tableaux ci-dessous.\\
 \begin{table}[H]
   \centering
   \caption{Distribution par sexe ($S$)}
@@ -122,8 +123,8 @@ Nous obtenons.
 \[
 H(S) = 0,9258  \hspace{2 cm} H(C)= 2,3266
 \]
-A cette étape, nous pouvons interpréter les résulats. L'entropie d'une variables, mesure l'incertitude liée a celle ci. Donc la variable $C$ est la variable avec l'incertitude la plus élevée.\\
-Nous allons maintenant calculer les valeurs suivantes : $H(A,S)$, $H(A,C)$ et $H(S,C)$. Pour ce faire, nous déterminerons les tableaux joints correspondants pour chacune de ces paires de variables. Puis nous calculerons l'entropie des ces paires.
+A cette étape, nous pouvons interpréter les résulats. L'entropie d'une variable, mesure l'incertitude liée a celle-ci. Donc la variable $C$ est la variable avec l'incertitude la plus élevée.\\
+Nous allons maintenant calculer les valeurs suivantes : $H(A,S)$, $H(A,C)$ et $H(S,C)$. Pour ce faire, nous déterminerons les tableaux joints correspondants pour chacune de ces paires de variables. Puis nous calculerons l'entropie de ces paires.
 \[
   H(X) = - \sum_{x \in Tableau} P(x) \log_2(P(x))
 \]
@@ -183,8 +184,8 @@ I(A,(SC))= 0,029803
 I(S,(CA))=0,029813
 \]
 L’information mutuelle mesure la quantité d’information partagée entre deux variables aléatoires, indiquant dans quelle mesure la connaissance de l’une des variables réduit l’incertitude concernant l’autre. 
-Avec les calculs précédants, nous observons que la connaissance de la catégorie socioprofessionel réduit le plus l'incertitude sur l'âge et le sexe.\\
-De plus, une information mutuelle proche de 0 sugère une indépendance.\\
+Avec les calculs précédents, nous observons que la connaissance de la catégorie socioprofessionelle réduit le plus l'incertitude sur l'âge et le sexe.\\
+De plus, une information mutuelle proche de 0 suggère une indépendance.\\
 Calculons le rapport entre l'information mutuelle et la variable conditionnée le plus élevé.
 \[
 R_1 = \frac{I(C,(AS))}{H(A,C)}=0,0187
@@ -196,7 +197,7 @@ R_2 = \frac{I(A,(SC)))}{H(S,C)}=0,0092
 R_3 = \frac{I(S,(CA)))}{H(A,C)}=0,0066
 \]
 Le rapport $R_1$ est le plus élevé. Donc la variable $C$ modélisé par les deux autres ($A$ et $S$) nous donne le plus d'information.
-En d'autres termes, la connaissance de la catégorie socioprofesionnelle et du couple âge, sexe apporte un gain d'information sur le couple âge, catégorie socioprofesionnelle. Et ce gain est de $1,8\%$.
+En d'autres termes, la connaissance de la catégorie socioprofessionnelle et du couple âge, sexe apporte un gain d'information sur le couple âge, catégorie socioprofessionnelle. Et ce gain est de $1,8\%$.
 \subsection{Arbre de segmentation binaire}
 Grâce à la partie \ref{1.1}, nous pouvons calculer les informations mutuelles suivantes.
 \[
@@ -208,7 +209,7 @@ I(A,C) = 0,02830
 \[
 I(S,C)= 0,02831
 \]
-Les résultats ci dessus, permettent de faire les interprétations suivantes. La variable âge et sexe sont proche de l'indépendance. Donc l'une n'influe presque pas sur l'autre. Et l'information mutuelle entre $A$ et $C$ est très proche de celle entre $S$ et $C$.
+Les résultats ci-dessus, permettent de faire les interprétations suivantes. La variable âge et sexe sont proches de l'indépendance. Donc l'une n'influe presque pas sur l'autre. Et l'information mutuelle entre $A$ et $C$ est très proche de celle entre $S$ et $C$.
 \\
 Calculons maintenant la somme des informations mutuelles de chaque variable avec les deux autres. En pratique, nous souhaitons identifier la variable qui fournit le plus d'informations sur les autres. Cela revient à calculer :
 \begin{equation}
@@ -230,7 +231,7 @@ Nous avons donc $\bar{I_C}$ qui est le plus élevé. Ainsi, l'arbre de segmentat
 \\
 Ce résultat était attendu, il correspond avec ce qu'on a trouvé dans la partie \ref{1.1}. Cela nous conforte dans l'idée que la variables $C$ nous apporte plus d'informations sur les deux autres.
 \\
-De plus, lors de la construction de l'abre, le choix de la deuxième variable de segmentations n'a pas d'inmportance, étant donné qu'il nous reste deux variables de segmentation. 
+De plus, lors de la construction de l'arbre, le choix de la deuxième variable de segmentations n'a pas d'importance, étant donné qu'il nous reste deux variables de segmentation. 
 \newpage
 \begin{figure}
   \begin{center}
@@ -284,7 +285,7 @@ De plus, lors de la construction de l'abre, le choix de la deuxième variable de
 
 \subsubsection{Recodage en 2 variables}
 
-En agrégeant seulement les classes contigues, nous avons 4 possibilités de regroupement binaire de 
+En agrégeant seulement les classes contiguës, nous avons 4 possibilités de regroupement binaire de 
 $X$.
 \\
  
@@ -330,7 +331,7 @@ En effet $H(Z_1)$ à l'entropie la plus élevée.
 
 \subsubsection{Recodage en 3 variables}
 
-En procédant de la meme façon, on considère alors 6 cas :
+En procédant de la même façon, on considère alors 6 cas :
 
 \[
 Z_1 =\{ \{0 \% \} , \{0 - 0.5 \%\} ,\{0.5-1 \% ,1-3 \% ,>3 \% \} \}  
@@ -351,15 +352,15 @@ Z_1 =\{ \{0 \% \} , \{0 - 0.5 \%\} ,\{0.5-1 \% ,1-3 \% ,>3 \% \} \}
   Z_6 =\{ \{0 \%, 0 - 0.5\%,  0.5-1 \% \} , \{1-3 \%  \} ,\{>3 \% \} \}
 \]
 \\
-L'entropie est calculé numériquement :
+L'entropie est calculée numériquement :
 \[
 H(Z_1) = 1,068 \hspace{0.5cm} H(Z_2) = 1,014 \hspace{0.5cm} H(Z_3) = 0,740 \hspace{0.5cm} H(Z_4) = 0,721 \hspace{0,5cm} H(Z_5) = 0.915 \hspace{0,5 cm} H(Z_6) = 0.474
 \]
-Nous remarquons que le meilleure recodage en trois variables est $Z_1$.
+Nous remarquons que le meilleur recodage en trois variables est $Z_1$.
 
 \subsection{Le meilleur recodage de X pour prédire Y }
 
-Il sagit ici de recoder $X$ en réduisant l'incertitude sur $Y$.
+Il s'agit ici de recoder $X$ en réduisant l'incertitude sur $Y$.
 Nous devons donc trouver le $Z_k$ qui maximise l'information mutuelle entre $Z_k$ et Y.
 \\
 C'est à dire, trouvons le recodage $Z_k$ qui maximise :
@@ -382,21 +383,21 @@ I(Z_k,Y) = H(Z_k) + H(Y) - H(Z_k,Y).
 
   On a :
 \[
-H(Z_1)= -(\frac{29}{72}ln(\frac{29}{72})+\frac{43}{72}ln(\frac{43}{72}))
+H(Z_1)= -\left(\frac{29}{72}ln(\frac{29}{72})+\frac{43}{72}ln(\frac{43}{72})\right)
 \]
 \[
-H(Y)=-(\frac{22}{72}ln(\frac{22}{72})+\frac{50}{72}ln(\frac{50}{72}))
+H(Y)=-\left(\frac{22}{72}ln(\frac{22}{72})+\frac{50}{72}ln(\frac{50}{72})\right)
 \]
 \[
-H(Z_1,Y)=-(\frac{2}{72}log(\frac{2}{72})+\frac{27}{72}log(\frac{27}{72})+\frac{20}{72}log(\frac{20}{72})+\frac{23}{72}log(\frac{23}{72}))
+H(Z_1,Y)=-\left(\frac{2}{72}log(\frac{2}{72})+\frac{27}{72}log(\frac{27}{72})+\frac{20}{72}log(\frac{20}{72})+\frac{23}{72}log(\frac{23}{72})\right)
 \]
 
 
 Nous trouvons alors:
 \[
-  I(Z_1; Y)= 0.102
+  I(Z_1, Y)= 0.102
 \]
-Faisons le même cheminement mais avec les autres variables. Nous obtenons alors les informations mutuelles suivante.
+Faisons le même cheminement, mais avec les autres variables. Nous obtenons alors les informations mutuelles suivante.
 
 \[
 I(Z_2,Y) = 0.063
@@ -409,7 +410,7 @@ I(Z_3,Y) = 0.023
 \[
 I(Z_4,Y) = 0.016
 \]
-On observe que l'information mutuelle la plus élevé est $I(Z_1,Y)$. Donc le recodage avec la variable $Z_1$ est le meilleur permettant de prédire $Y$.
+On observe que l'information mutuelle la plus élevée est $I(Z_1,Y)$. Donc le recodage avec la variable $Z_1$ est le meilleur permettant de prédire $Y$. En effet une information mutuelle élevée indique que les deux variables partagent de l'information en commun. De plus lors d'un recodage de variable, choisir l'information mutuelle la plus élevée, nous donne plus d'information sur $Y$.
 
 
 \newpage
@@ -444,9 +445,9 @@ On considère le tableau recensant des espèces de champignons suivant 4 variabl
   \\
   \\
   Pour ce faire, on calcul les informations mutuelles de $X_1$ avec chaque autre variable.
-  En effet, nous allons chercher la variables qui informe le plus sur la commestibilité. Nous effecturons nos calculs avec le logarithme népérien.
+  En effet, nous allons chercher la variable qui informe le plus sur la comestibilité. Nous effectuerons nos calculs avec le logarithme népérien.
 
-Nous posons pour la suite
+Nous posons pour la suite.
 \[
 X_1 = \{Comestible\} \hspace{1cm} X_2 = \{Chapeau\} \hspace{1cm} X_3 = \{Tige\} \hspace{1cm} X_4 = \{Couleur\}
 \]
@@ -504,14 +505,14 @@ De la même manière, nous pouvons calculer l'information mutuelle et nous trouv
 
 
 
-Nous pouvons conclure a cette étape que la variable qui apporte le plus d'information sur la comestibilité du champignon est sa couleur. En effet, l'information mutuelle $I(X_1,X_4)$ est la plus élevé.
+Nous pouvons conclure à cette étape que la variable qui apporte le plus d'information sur la comestibilité du champignon est sa couleur. En effet, l'information mutuelle $I(X_1,X_4)$ est la plus élevée.
 \\
-De plus, on se rend compte dans le tableau \ref{tab:champignons} que les champignons brun sont commestibles alors que les rouges ne le sont pas.
+De plus, on se rend compte dans le tableau \ref{tab:champignons} que les champignons bruns sont comestibles alors que les rouges ne le sont pas.
 \\
 Traitons le cas des champignons jaune.
     
 \subsubsection{Deuxieme étape : champignons jaune}
-En considérant seulement les champignons jaune, on calcul les informations mutuelles suivant les autres variables ($X_2$ et $X_3$). Nous obtenons les tableaux suivant.
+En considérant seulement les champignons jaunes, on calcul les informations mutuelles suivant les autres variables ($X_2$ et $X_3$). Nous obtenons les tableaux suivants.
 
 \begin{table}[H]
   \caption{Tableau de $X_1$,$X_2$ avec champignon jaune}
@@ -534,17 +535,17 @@ En considérant seulement les champignons jaune, on calcul les informations mutu
   N                    & 0 & 2 \\ \hline
   \end{tabular}
   \end{table}
-Nous calculons les informations mutuelles et nous obtenons les résultats suivant.
+Nous calculons les informations mutuelles et nous obtenons les résultats suivants.
 \[
   I(X_1,X_2)=0.118 \hspace{1cm} I(X_1,X_3)=0.223.
 \]
 
-On considère alors la variable $X_3$, celle qui correspond à la tige du champignon. Si le champignon est jaune et que la tige est épaisse, alors il est commestible. Sinon il faut distinguer entre le champignon d (commestible) et les champignons g,i,j.
-Mais seul les champignons d et j partagent la même forme du chapeau (plat), alors que les champignons g et i sont respectivement; pointu, arrondi et tout deux non comestible.
+On considère alors la variable $X_3$, celle qui correspond à la tige du champignon. Si le champignon est jaune et que la tige est épaisse, alors il est comestible. Sinon il faut distinguer entre le champignon d (comestible) et les champignons g,i,j.
+Mais seuls les champignons d et j partagent la même forme du chapeau (plat), alors que les champignons g et i sont respectivement pointu, arrondi et tout deux non comestibles.
 \newpage
 \subsection{Arbre de discrimination}
 
-Avec toutes les informations mutuelles calculé, on obtient alors l'arbre suivant :
+Avec toutes les informations mutuelles calculées, on obtient alors l'arbre suivant :
 
 
 
