--- a/TID/DM.tex
+++ b/TID/DM.tex
@@ -410,7 +410,7 @@ I(Z_3,Y) = 0.023
 \[
 I(Z_4,Y) = 0.016
 \]
-On observe que l'information mutuelle la plus élevée est $I(Z_1,Y)$. Donc le recodage avec la variable $Z_1$ est le meilleur permettant de prédire $Y$. En effet une information mutuelle élevée indique que les deux variables partagent de l'information en commun. De plus lors d'un recodage de variable, choisir l'information mutuelle la plus élevée, nous donne plus d'information sur $Y$.
+On observe que l'information mutuelle la plus élevée est $I(Z_1,Y)$. Donc le recodage avec la variable $Z_1$ est le meilleur permettant de prédire $Y$. En effet, une information mutuelle élevée indique que les deux variables partagent de l'information en commun. De plus lors d'un recodage de variable, choisir l'information mutuelle la plus élevée, nous donne plus d'information sur $Y$.
 
 
 \newpage
